[gd_scene load_steps=8 format=3 uid="uid://n7ew83nu7xpl"]

[ext_resource type="Script" uid="uid://dd1h4kjc6mdxx" path="res://ui/poultry_man_menu/flyers/arenas.gd" id="1_asbvh"]
[ext_resource type="Script" uid="uid://ctoq181od8w0k" path="res://ui/poultry_man_menu/flyers/flyer_resources/arena_flyer_resource.gd" id="2_arap8"]
[ext_resource type="Resource" uid="uid://b0yajffbj51o8" path="res://ui/poultry_man_menu/flyers/flyer_resources/training_arena.tres" id="3_wxo2h"]
[ext_resource type="Resource" uid="uid://dlcv842gq6jcg" path="res://ui/poultry_man_menu/flyers/flyer_resources/flying_arena.tres" id="4_asbvh"]
[ext_resource type="Resource" uid="uid://2wc7dt0too40" path="res://ui/poultry_man_menu/flyers/flyer_resources/sewer_arena.tres" id="5_8iumh"]
[ext_resource type="PackedScene" uid="uid://bdm28vmjyejeo" path="res://ui/buttons/close_button.tscn" id="6_wcu6n"]
[ext_resource type="PackedScene" uid="uid://d14bjxvd3x8qf" path="res://ui/poultry_man_menu/flyers/preview/arena_flyer_preview_container.tscn" id="7_x3apk"]

[node name="Arenas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asbvh")
flyers_to_setup = Array[ExtResource("2_arap8")]([ExtResource("3_wxo2h"), ExtResource("4_asbvh"), ExtResource("5_8iumh")])

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
theme_type_variation = &"SettingsHeaderContainer"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FightLabel" type="Label" parent="Panel/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Arenas"
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" parent="Panel/VBoxContainer/Panel/MarginContainer/HBoxContainer" instance=ExtResource("6_wcu6n")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="FightsContainer" type="GridContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="ArenaFlyerPreviewContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("7_x3apk")]
unique_name_in_owner = true
layout_mode = 2

[node name="SizePlaceholder" type="Control" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
